--- a/styles/ableplayer.css
+++ b/styles/ableplayer.css
@@ -1350,7 +1350,7 @@ div.able-skin-2020 div.able-seekbar-wrapper {
     content: "\e904";
 }
 .icon-rabbit:before {
-    content: "\e905";*/
+    content: "\e905"; comentario: e903x2*/
 }
 .icon-ellipsis:before {
     content: "\e903";
